k8s/inventory-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8000
  type: NodePort
