k8s/inventory-db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-inventory-service-to-inventory-db
  namespace: stox
spec:
  podSelector:
    matchLabels:
      app: inventory-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: inventory-service
    ports:
    - protocol: TCP
      port: 5432
  policyTypes:
  - Ingress
