k8s/inventory-service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-other-services-to-inventory-service
  namespace: stox
spec:
  podSelector:
    matchLabels:
      app: auth-service
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: auth-service
    - podSelector:
        matchLabels:
          app: order-service
    ports:
    - protocol: TCP
      port: 8000
  policyTypes:
  - Ingress
